# waterlevels_oker

./: .gitignore  .pre-commit-config.yaml  404.html  Makefile  app.py  index.html  justfile  pyproject.toml  readme.md  setup.sh
.github/scripts/: check_signed.sh
.github/workflows/: compliance.yml  deploy-docs.yml  docs.yml  pull-requets.yml
documentation/: mkdocs.yml
documentation/docs/: frontend.md  getting-started.md  index.md  models.md
frontend/: index.html
getting-started/: index.html
models/: index.html
notebooks/: 01-EDA.ipynb  01-weatherAPI.ipynb  EDA_ohrum.ipynb  EDA_weather.ipynb  QVC_AI_Hacathon.ipynb  nb_utils.py
notebooks/EDA/: EDA_Tim_feature_selection.ipynb  EDA_Tim_other_data.ipynb  ED_Tim_okertalsperre.ipynb
notebooks/Train/: forecast.json  host.py  scaler1.pkl  scaler2.pkl  scaler3.pkl  scaler4.pkl  scaler5.pkl  scaler6.pkl  train.ipynb  train.py
presentation/final_presentation.iapresenter/: info.json  text.md
search/: search_index.json
static/: measure_stations.md
tests/unit_tests/: test_initial.py
waterlevels_oker/: config.py  data.py  model.py  plot_utils.py  utils.py
