[tool.poetry]
name = "waterlevels_oker"
version = "0.1.0"
description = "Predicting the waterlevels of the German river Oker."
authors = ["Tim Hildebrandt <44113468+tim-hilde@users.noreply.github.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.10.6"
numpy = "^1.26.4"
pandas = "^2.2.2"
pyarrow = "^17.0.0"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"
tensorflow = "^2.16"
beautifulsoup4 = "^4.12.3"
tqdm = "^4.66.4"
missingno = "^0.5.2"
openpyxl = "^3.1.5"
mkdocs = "^1.6.0"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ipykernel = "^6.29.5"
jupyter = "^1.0.0"
notebook = "^7.2.1"
pylint = "^3.2.5"
pytest = "^7.4.2"
ruff = "^0.5.0"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "PD", "NPY", "SIM", "N", "C90", "D1"]
ignore = []

indent-style = "tab"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
